--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <header>
         <h1>Predictive analysis</h1>
     </header>   
-    <div style="color: red;">
+    <div style="color: white;">
         <form  action="{{ url_for('predict')}}" method="post">
             
             <h2>Year</h2>
@@ -35,7 +35,7 @@
             <br><br><button id="sub" type="submit ">Calculate Price</button>
             <br>
         </form>
-        <br><br><h1 style="color:black">{{ prediction_text }}<h1>
+        <br><br><h1 style="color:white">{{ prediction_text }}<h1>
     </h1>
 
 
@@ -54,12 +54,14 @@
         
          body {
             background-color: aqua;
-            background-image: url(static/bg.jpg);
+            background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(static/bg.jpg);
             background-size: cover;
             background-position: left;
             text-align: center;
             padding: 0px;
         }
+
+	
         
         #research {
             font-size: 18px;
