--- a/templates/index.html
+++ b/templates/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <head name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="../static/logo.png" type="image/icon type">	    
     <title>Car Price Prediction</title>
 </head>
 
